[package]
name = "simple-cli"
version = "0.1.1"
edition = "2024"
description = "A small Rust CLI demo distributed with cargo-dist"
license = "MIT"
repository = "https://github.com/JCLee777/simple-cli"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
git2 = "0.19"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
